# deployment

./: CMakeLists.txt
scripts/: CMakeLists.txt  ONNXConfig.cmake  export.sh  functions.sh  linux.sh  ncnn.sh  onnxruntime.sh  opencv.sh  run.sh  torch.sh  windows.ps1
src/: daai.cpp  daai.h  headers.h
src/api/: _net_api.cpp  _net_api.h  classification.cpp  classification.h  object_detection.cpp  object_detection.h  pose_estimation.cpp  pose_estimation.h
src/core/: _framework.cpp  _framework.h  _net.cpp  _net.h  _util.cpp  _util.h  mmcls.cpp  mmcls.h  mmpose.cpp  mmpose.h  yolov5.cpp  yolov5.h  yolov7.cpp  yolov7.h
src/net/: ncnn_net.cpp  ncnn_net.h  onnx_net.cpp  onnx_net.h  tnn_net.cpp  tnn_net.h  torch_net.cpp  torch_net.h  trt_net.cpp  trt_net.cu  trt_net.h
